--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
 </head>
     <body>
         <span class="main-title">Discover hidden places in the world around you</span>
-        <br />
-        <br />
-        <a class="dload-link" href="">Download Excursion (Coming Soon!)</a>
+        <p><a class="dload-link" href="">Download Excursion (Coming Soon!)</a></p>
+        <p><video src="./resources/videos/excursion.mp4"></video></p>
+        <p class="guide-stn">Your personal travel guide</p>
+        <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+        <p><img src="./resources/images/camp.jpg"></p>
+        <p><img src="./resources/images/phone.png"></p>
+        <p class="main-title">Coming Soon for iPhone and Android</p>
+        <p><a class="dload-link" href="">Download Excursion (Coming Soon!)</a></p>
+        <p class="cr">&copy Excursion</p>
     </body>
 </html>
