--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
 <head>
-    <title></title>
+    <title>Excursion App</title>
     <link href="./css/style.css" type="text/css" rel="stylesheet">
 </head>
     <body>
